[package]
name = "dbl_validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5"
rand = "0.8"
[dependencies]


[[bench]]
name = "validate_ascii_number"
harness = false